Fix quickNote popover overflow
#787

Ensures popover doesn’t stretch when many attachments visible

--- a/src/clientFilePage/progNotesTab.styl
+++ b/src/clientFilePage/progNotesTab.styl
@@ -81,9 +81,11 @@
 					max-width none
 
 					.popover-content
+						min-width 515px // exact fit for buttonBar
+						max-width 515px
+
 						> textarea
-							width 500px
-							height 300px
+							height 250px
 
 						> .buttonBar
 							padding 10px 0 0
